elements overlapping is fixed

--- a/style.css
+++ b/style.css
@@ -137,7 +137,6 @@ main {
   align-items: center;
   justify-content: center;
   overflow: visible;
-  z-index: 1;
   /* box-shadow: 0 0 2px rgba(167, 167, 20, 0.3); */
 }
 
@@ -145,12 +144,13 @@ main {
   position: absolute;
   display: flex;
   justify-content: center;
-  overflow-x: visible;
+  overflow: visible;
   border: 1px black solid;
   height: 1px;
   padding: 0;
   margin: 0;
   cursor: pointer;
+  z-index: 1;
   box-sizing: border-box;
 }
 
@@ -165,6 +165,7 @@ main {
 }
 
 .weight {
+  position: absolute;
   overflow: hidden;
   resize: none;
   border: none;
@@ -172,6 +173,7 @@ main {
   transform: translateY(-110%);
   background: transparent;
   text-align-last: center;
+  z-index: 40 !important;
 }
 
 .weight.warning:focus {
@@ -190,18 +192,19 @@ main {
 }
 
 .node .name {
-  position: relative;
-  overflow: hidden;
+  position: absolute;
   resize: none;
   border: none;
-  display: flex;
+  overflow: hidden;
+  display: grid;
+  white-space: pre-wrap;
   /*white-space: nowrap;*/
   background: transparent;
-  width: 50px !important;
   height: 0.8rem;
   text-align-last: center;
   z-index: 100;
 }
+
 
 .node .name.up {
   bottom: 1.4rem;
